fix 3 benchmarks suite